--- a/factorial_tools.info.yml
+++ b/factorial_tools.info.yml
@@ -1,4 +1,4 @@
 name: Factorial Tools
 type: module
 description: 'Provides various commonly used helper functions for deployment.'
-core_version_requirement: ^9.3 || ^10
+core_version_requirement: ^8 || ^9 || ^10
